@@ -123,7 +123,12 @@ module Mail
     #  a.comments #=> ['My email address']
     def comments
       parse unless @parsed
-      get_comments.map { |c| c.squeeze(SPACE) } unless get_comments.empty?
+      comments = get_comments
+      if comments.nil? || comments.none?
+        nil
+      else
+        comments.map { |c| c.squeeze(SPACE) }
+      end
     end
 
     # Sometimes an address will not have a display name, but might have the name
