@@ -1,5 +1,7 @@
 == Version 2.6.5 - Unreleased
 
+Bugs:
+* #605 - Fix Mail::Address#name for nil addresses (peterkovacs)
 * #1003 - Fix decoding some b encoded headers on specific rubies that don't account for lack of base64 padding (kjg)
 
 == Version 2.6.4 - Wed Mar 23 08:16 -0700 2016 Jeremy Daer <jeremydaer@gmail.com>
